added href values for all remaining links

--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
         <div class="social-img-container cont">
             <ul>
                 <li>
-                    <a href="https://github.com/edreesw">
+                    <a href="https://github.com/edreesw" target="_blank" rel="noopener noreferrer">
                         <i class="fa-brands fa-github"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="https://www.linkedin.com/in/edrees-wahezi/" target="_blank" rel="noopener noreferrer">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="https://www.twitch.tv/edzisedzi" target="_blank" rel="noopener noreferrer">
                         <i class="fa-brands fa-twitch"></i>
                     </a>    
                 </li>
                 <li>
-                    <a href="">
+                    <a href="https://twitter.com/EdziSedzi" target="_blank" rel="noopener noreferrer">
                         <i class="fa-brands fa-twitter"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="https://steamcommunity.com/id/sedzi/" target="_blank" rel="noopener noreferrer">
                         <i class="fa-brands fa-steam"></i>
                     </a>
                 </li>
